remove LocalizationFactory log